--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@
     background: #e5e5ed;
     padding: 3px 13px;
     color: #828488;
-    font-weight: bold;
+    /* font-weight: bold; */
 }
 
 .about_header {
