--- a/style.css
+++ b/style.css
@@ -128,6 +128,47 @@
     justify-content: space-between;
 }
 
+.skill {
+    display: flex;
+    justify-content: center;
+}
+
+.skill_2 {
+    border-radius: 60px;
+    background: #e5e5ed;
+    padding: 4px 20px;
+    color: #828488;
+}
+.skill_head{
+    display: flex;
+    justify-content: center;
+    margin: 15px;
+    color: #828488;
+    font-weight: 300px;
+}
+.image_head{
+    margin: 25px;
+    color: #828488;
+    display: flex;
+    justify-content: space-between;
+    
+}
+.java{
+    width: 50px;
+    height: 50px;
+    object-fit: cover;
+}
+.image_second{
+    margin: 25px;
+    color: #828488;
+    display: flex;
+    justify-content: space-between;
+}
+
+
+
+
+
 @media only screen and (max-width: 500px) {
     .menu {
         display: none;
